[gd_scene load_steps=8 format=3 uid="uid://qaxj66khtlvw"]

[ext_resource type="Script" uid="uid://cibe067055uud" path="res://scripts/safe_zone/lilypad.gd" id="1_fmlo0"]
[ext_resource type="Texture2D" uid="uid://cbrejlug3pd5l" path="res://assets/sprites/Lilypad.png" id="1_tgogo"]
[ext_resource type="Texture2D" uid="uid://7sigon884lvg" path="res://assets/sprites/frog.png" id="3_b41yl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vovn7"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_0y8ob"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GoalFrogSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_b41yl"]
resource_name = "rotate_frog"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GoalFrogSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-6.28319, -3.14159, 0.0, 3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lgpc0"]
_data = {
&"RESET": SubResource("Animation_0y8ob"),
&"rotate_frog": SubResource("Animation_b41yl")
}

[node name="Lilypad" type="Node2D"]
script = ExtResource("1_fmlo0")

[node name="LilypadSprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.3, 1.3)
texture = ExtResource("1_tgogo")

[node name="GoalFrogSprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_b41yl")
hframes = 2
vframes = 4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_vovn7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lgpc0")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
